// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`creates new config when no .babelrc found 1`] = `
Object {
  "plugins": Array [
    "<<REPLACED>>/utils/fixRequireIssues.js",
    "<<NODE_MODULE>>/react-hot-loader/babel.js",
    "<<REPLACED>>/hot/babelPlugin.js",
    "syntax-async-functions",
    "syntax-class-properties",
    "syntax-trailing-function-commas",
    "transform-class-properties",
    "transform-es2015-function-name",
    "transform-es2015-arrow-functions",
    "transform-es2015-block-scoping",
    "transform-es2015-classes",
    "transform-es2015-computed-properties",
    "check-es2015-constants",
    "transform-es2015-destructuring",
    Array [
      "transform-es2015-modules-commonjs",
      Object {
        "allowTopLevelThis": true,
        "strict": false,
      },
    ],
    "transform-es2015-parameters",
    "transform-es2015-shorthand-properties",
    "transform-es2015-spread",
    "transform-es2015-template-literals",
    "transform-es2015-literals",
    "transform-flow-strip-types",
    "transform-object-assign",
    "transform-object-rest-spread",
    "transform-react-display-name",
    "transform-react-jsx-source",
    "transform-react-jsx",
    Array [
      "transform-es2015-for-of",
      Object {
        "loose": true,
      },
    ],
  ],
}
`;

exports[`does not include "hot" plugins in production 1`] = `
Object {
  "plugins": Array [
    "<<REPLACED>>/utils/fixRequireIssues.js",
    "syntax-async-functions",
    "syntax-class-properties",
    "syntax-trailing-function-commas",
    "transform-class-properties",
    "transform-es2015-function-name",
    "transform-es2015-arrow-functions",
    "transform-es2015-block-scoping",
    "transform-es2015-classes",
    "transform-es2015-computed-properties",
    "check-es2015-constants",
    "transform-es2015-destructuring",
    Array [
      "transform-es2015-modules-commonjs",
      Object {
        "allowTopLevelThis": true,
        "strict": false,
      },
    ],
    "transform-es2015-parameters",
    "transform-es2015-shorthand-properties",
    "transform-es2015-spread",
    "transform-es2015-template-literals",
    "transform-es2015-literals",
    "transform-flow-strip-types",
    "transform-object-assign",
    "transform-object-rest-spread",
    "transform-react-display-name",
    "transform-react-jsx-source",
    "transform-react-jsx",
    Array [
      "transform-es2015-for-of",
      Object {
        "loose": true,
      },
    ],
  ],
}
`;
